<resources>
    <string name="app_name">Flight Club</string>


    <string name="text_LetsFly">Let\'s Fly </string>
    <string name="text_layout_email">E-mail </string>
    <string name="text_layout_password">Password </string>

    <string name="textView_already">Do you have an account?</string>
    <string name="textView_click_signIn">SIGN IN</string>
    <string name="textView_forgotPassword">Forgot password?</string>


    <string name="image_backgroundSignIn">Blue background</string>
    <string name="image_worldmap">worldmap background</string>
    <string name="image_plane_paper">paper plane background</string>


    <string name="checkBox_rememberMe_signup">Remember me </string>


    <string name="button_signup">Sign Up </string>
    <string name="buttonImage_facebook">Facebook sign in button </string>
    <string name="buttonImage_twitter">Twitter sign in button </string>
    <string name="buttonImage_google">Google sign in button </string>


    <string name="text_welcome">Welcome</string>

    <string name="textView_dontYou">Don\'t you have an account?</string>
    <string name="textView_click_signUp">SIGN UP</string>


    <string name="button_signIn">Sign In </string>


    <string name="image_takeoff_home">Takeoff plane</string>

    <string name="button_roundtrip_home">Round trip </string>
    <string name="button_oneway_home">One Way </string>
    <string name="button_searchflt_home">Search Flights</string>
    <string name="button_pick_date">Pick Date</string>


    <string name="textView_departure_home">Departure From </string>
    <string name="textView_arrival_home">Arrival At </string>
    <string name="textView_pick_date">Date </string>


    <string name="menu_seatclass_home">Seat</string>
    <string name="menu_travellers_home">Passenger</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="cancel">Cancel</string>
    <string name="reset">Reset</string>
    <string name="e_mail">E-mail</string>


    <string-array name="seatclass">
        <item>Economy</item>
        <item>Business</item>
        <item>First Class</item>
        <item>VIP</item>
    </string-array>

    <string-array name="passengers">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_icon">Home</string>
    <string name="air_plane_ticket">Ticket</string>
    <string name="profile_icon">Profile</string>
    <string name="my_account">My Account</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="identity_number">Identity Number</string>
    <string name="phone">Phone</string>
    <string name="change_password">Change Password</string>
    <string name="confirm_changes">Confirm Changes</string>
    <string name="bgg">BGG</string>
    <string name="bingol_tr">Bingöl,TR</string>
    <string name="ayt">AYT</string>
    <string name="antalya_tr">Antalya,TR</string>
    <string name="to">To</string>
    <string name="ticket_summary">Ticket Summary</string>
    <string name="payment">Payment</string>
    <string name="card_number">Card Number</string>
    <string name="cvv">CVV</string>
    <string name="expire_date">Expire Date</string>
    <string name="confirm_pay"><![CDATA[Confirm & Pay]]></string>
    <string name="total">Total :</string>
    <string name="_18_aug_2023">18 Aug 2023</string>
    <string name="_09_45">09:45</string>
    <string name="flight_time">Flight Time:</string>
    <string name="_12_00">12:00</string>
    <string name="pnr">PNR:</string>
    <string name="seat">💺Seat:</string>
    <string name="_02_15">02:15</string>
    <string name="f445sf">F445SF</string>
    <string name="_2c">2C</string>
    <string name="_1996">1996$</string>
    <string name="pnr_no">PNR no</string>
    <string name="check_in">Check In 💺</string>
    <string name="recent_flights">Recent Flights</string>
    <string name="arrival">ARRIVAL</string>
    <string name="departure">DEPARTURE</string>
    <string name="_1_person">1.Person</string>
    <string name="surname_dotdot">SURNAME :</string>
    <string name="identity_no_DOTDOT">IDENTITY NO :</string>
    <string name="name_dotdot">NAME :</string>
    <string name="serhan">SERHAN</string>
    <string name="baymaz">BAYMAZ</string>
    <string name="_12345678912">12345678912</string>
    <string name="birthday">Birthday</string>
    <string name="man">Man 🧍‍♂️</string>
    <string name="woman">Woman 🧍‍♀️</string>
    <string name="are_you_sure">Are you sure ?</string>
    <string name="i_m_sure">I\'m SURE</string>
    <string name="cancel_the_flight">Cancel the flight</string>
    <string name="check_out">Check Out</string>
    <string name="continuebtn">Continue</string>
    <string name="okey">Okey</string>


</resources>